--- a/prepx.dSYM/Contents/Info.plist
+++ b/prepx.dSYM/Contents/Info.plist
@@ -5,7 +5,7 @@
 		<key>CFBundleDevelopmentRegion</key>
 		<string>English</string>
 		<key>CFBundleIdentifier</key>
-		<string>com.apple.xcode.dsym.prep17</string>
+		<string>com.apple.xcode.dsym.prepx</string>
 		<key>CFBundleInfoDictionaryVersion</key>
 		<string>6.0</string>
 		<key>CFBundlePackageType</key>
